Fixed alignement issue and about page issue

--- a/modules/com.restlet/stylesheets/styles.css
+++ b/modules/com.restlet/stylesheets/styles.css
@@ -1023,7 +1023,7 @@ form,form>input {
 
 .quick-start {
 	width: 45%;
-	height: 223px;
+	height: 177px;
 	position: absolute;
 	right: 0;
 	top: 0px;
